--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.tharani.mydairy">
-    <!--manifest acts as metadata,declares all attributes of activity tags,permissions,services,broadcast receivers
-          tells a behavior of app-->
+
+    <!--
+    manifest acts as metadata,declares all attributes of activity tags,permissions,services,broadcast receivers
+          tells a behavior of app
+    -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,10 +20,17 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <!--An intent filter declares the capabilities of its parent component or screen
-              it tells a what an activity or service can do and what types of broadcasts a receiver can handle-->
+            <!--
+              An intent filter declares the capabilities of its parent component or screen
+              it tells a what an activity or service can do and what types of broadcasts a receiver can handle
+            -->
         </activity>
-        <activity android:name=".DairyActivity"></activity>
+        <activity android:name=".DairyActivity" />
+        <activity
+            android:name=".NoteListActivity"
+            android:label="@string/title_activity_note_list"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".DatePickerFragment"></activity>
     </application>
 
 </manifest>
